@@ -219,7 +219,7 @@
 	USECODE_INTRINSIC_PTR(remove_npc_face0),	// 0xc3
 	USECODE_INTRINSIC_PTR(remove_npc_face1),	// 0xc4
 	USECODE_INTRINSIC_PTR(set_conversation_slot),	// 0xc5
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc6
+	USECODE_INTRINSIC_PTR(is_dest_reachable),	// 0xc6
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc7
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc8
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc9
