@@ -284,7 +284,7 @@
 	USECODE_INTRINSIC_PTR(stop_time),			// 0xce
 	USECODE_INTRINSIC_PTR(center_view),			// 0xcf
 	USECODE_INTRINSIC_PTR(lightning),			// 0xd0
-	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xd1
+	USECODE_INTRINSIC_PTR(is_dest_reachable),				// 0xd1
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xd2
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xd3
 	USECODE_INTRINSIC_PTR(UNKNOWN),				// 0xd4
